--- a/wiki/it/Macro_FreeCAD_to_Kerkythea.html
+++ b/wiki/it/Macro_FreeCAD_to_Kerkythea.html
@@ -95,12 +95,8 @@ Al momento ci sono problemi per esportare le luci e la posizione della telecamer
 </p>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
 <p>Macro ExportToKerkythea.py
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FreeCAD_to_Kerkythea.png&amp;filetimestamp=20190707152027&amp;.html" class="mw-file-description"><img src="../File/Macro_FreeCAD_to_Kerkythea.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro ExportToKerkythea.py</b>
+</p><p>Icona barra strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FreeCAD_to_Kerkythea.png&amp;filetimestamp=20190707152027&amp;.html" class="mw-file-description"><img src="../File/Macro_FreeCAD_to_Kerkythea.png" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro ExportToKerkythea.py</b>
 </p>
 <pre># -*- coding: utf8 -*-
 #**************************************************************************************
@@ -672,13 +668,13 @@ exportKerkythea().exec_()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121084957
+Cached time: 20260121085039
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.029 seconds
-Real time usage: 0.055 seconds
-Preprocessor visited node count: 99/1000000
+CPU time usage: 0.028 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 98/1000000
 Post&#8208;expand include size: 2040/2097152 bytes
 Template argument size: 24301/2097152 bytes
 Highest expansion depth: 5/100
@@ -688,13 +684,13 @@ Unstrip post&#8208;expand size: 25387/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.323      1 -total
- 47.02%    4.854      1 Template:Clear
- 31.01%    3.201      1 Template:Macro/it
- 20.28%    2.093      1 Template:MacroCode
+100.00%    8.770      1 -total
+ 36.25%    3.179      1 Template:Clear
+ 31.33%    2.748      1 Template:Macro/it
+ 29.97%    2.628      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121084956 and revision id 1741833. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121085039 and revision id 1741835. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
