--- a/wiki/it/Macro_FreeCAD_to_Kerkythea.html
+++ b/wiki/it/Macro_FreeCAD_to_Kerkythea.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro FreeCAD nach Kerkythea (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro FreeCAD to Kerkythea (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro FreeCAD to Kerkythea (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_FreeCAD_to_Kerkythea.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: FreeCAD do Kerkythea (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -80,15 +80,9 @@ FC in Kerkythea
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <p>La macro &egrave; disponibile nel seguente repository github: <a rel="nofollow" class="external text" href="https://github.com/marmni/FreeCAD-Kerkythea">FreeCAD to Kerkythea-Exporter</a>
+</p><p>&Egrave; abbastanza autoesplicativa. Al momento ci sono problemi con l'esportazione delle luci e con la posizione della telecamera.
 </p>
-<div class="mw-translate-fuzzy">
-<p>E' praticamente auto-esplicativa.
-Al momento ci sono problemi per esportare le luci e la posizione della telecamera.
-</p>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Link">Link</span></h2>
-</div>
 <h2><span class="mw-headline" id="Link_2">Link</span></h2>
 <p>La pagina di discussione: <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?t=8861">Kerkythea Rendering System</a>
 </p><p><span id="Script"></span>
@@ -668,29 +662,29 @@ exportKerkythea().exec_()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121085039
+Cached time: 20260121085059
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.028 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 98/1000000
+CPU time usage: 0.026 seconds
+Real time usage: 0.036 seconds
+Preprocessor visited node count: 96/1000000
 Post&#8208;expand include size: 2040/2097152 bytes
 Template argument size: 24301/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 25387/5000000 bytes
+Unstrip post&#8208;expand size: 25391/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.770      1 -total
- 36.25%    3.179      1 Template:Clear
- 31.33%    2.748      1 Template:Macro/it
- 29.97%    2.628      1 Template:MacroCode
+100.00%    4.414      1 -total
+ 42.61%    1.881      1 Template:Macro/it
+ 27.80%    1.227      1 Template:MacroCode
+ 26.17%    1.155      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121085039 and revision id 1741835. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:59530-0!canonical and timestamp 20260121085059 and revision id 1741839. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
