--- a/wiki/it/Macro_ForceRecompute.html
+++ b/wiki/it/Macro_ForceRecompute.html
@@ -1,14 +1,13 @@
-<link href="../site.css" rel="stylesheet" type="text/css"/>
-<div class="mw-page-container"><h1 class="firstHeading mw-first-heading" id="firstHeading"><span class="mw-page-title-main">Macro ForceRecompute/it</span></h1><div class="mw-parser-output"><div class="mw-pt-languages noprint" dir="ltr" lang="en"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a class="mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../de\Macro_ForceRecompute.html" lang="de" title="Makro Neuberechnung Erzwingen (100% translated)">Deutsch</a></li>
-<li><a class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../Macro_ForceRecompute.html" lang="en" title="Macro ForceRecompute (100% translated)">English</a></li>
-<li><a class="mw-pt-progress mw-pt-progress--complete" dir="ltr" href="../fr\Macro_ForceRecompute.html" lang="fr" title="Macro ForceRecompute (100% translated)">français</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" dir="ltr" lang="it">italiano</span></li>
-<li><a class="mw-pt-progress mw-pt-progress--stub" dir="ltr" href="../pl\Macro_ForceRecompute.html" lang="pl" title="Makrodefinicja: Wymuszaj ponowne obliczenia (11% translated)">polski</a></li></ul></div>
-<div class="mw-translate-fuzzy">
-<table class="fcinfobox wikitable ct" style="float: right; width: 230px; margin-left: 10px;" width="100%">
+<link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro ForceRecompute/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+ForceRecompute&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro Neuberechnung erzwingen (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../Macro_ForceRecompute.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="en" dir="ltr">English</a></li>
+<li><a href="../fr/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro ForceRecompute (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><a href="../pl/Macro_ForceRecompute.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Wymuszaj ponowne obliczenia (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span typeof="mw:File"><a class="mw-file-description" href="../File/Force_Recompute.png"><img decoding="async" height="32" src="../File/Force_Recompute.png" width="32"/></a></span><span> </span>
+<p><span typeof="mw:File"><a href="../index.php?title=Force_Recompute.png&amp;filetimestamp=20140929195915&amp;.html" class="mw-file-description"><img src="../File/Force_Recompute.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span><span> </span>
 Macro Force Recompute
 </p>
 </td></tr>
@@ -16,25 +15,25 @@ Macro Force Recompute
 <th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Forza il ricalcolo manuale del modello<br/><br/>Versione macro: 1.0<br/>Ultima modifica: 2014-09-01<br/>Versione FreeCAD: All<br/>Download: <a class="external text" href="https://www.freecadweb.org/wiki/images/8/88/Force_Recompute.png" rel="nofollow">ToolBar Icon</a><br/>Autore: shoogen<br/>
+<td class="ctEven left macro-description">Forza il ricalcolo manuale del modello<br><br>Versione macro: 1.0<br>Ultima modifica: 2014-09-01<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/8/88/Force_Recompute.png">ToolBar Icon</a><br>Autore: shoogen<br>
 </td></tr>
 <tr>
 <th class="ctOdd">Autore
 </th></tr>
 <tr>
-<td class="ctEven macro-author"><a class="new" href="../index.php?title=User;Shoogen&amp;action=edit&amp;redlink=1.html" title="User:Shoogen (page does not exist)">shoogen</a>
+<td class="ctEven macro-author"><a href="../index.php?title=User;Shoogen&amp;action=edit&amp;redlink=1.html" class="new" title="User:Shoogen (page does not exist)">shoogen</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Download
 </th></tr>
 <tr>
-<td class="ctEven macro-download"><a class="external text" href="https://www.freecadweb.org/wiki/images/8/88/Force_Recompute.png" rel="nofollow">ToolBar Icon</a>
+<td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://www.freecad.org/wiki/images/8/88/Force_Recompute.png">ToolBar Icon</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../it\Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br/><a href="../it\How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br/><a href="../it\Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
 <th class="ctOdd">Versione macro
@@ -70,37 +69,37 @@ Macro Force Recompute
 <th class="ctOdd">
 </th></tr>
 <tr>
-<td class="ctToc"><br/><div aria-labelledby="mw-toc-heading" class="toc" id="toc" role="navigation"><input class="toctogglecheckbox" id="toctogglecheckbox" role="button" style="display:none" type="checkbox"/><div class="toctitle" dir="ltr" lang="en"><h2 id="mw-toc-heading">Contents</h2><span class="toctogglespan"><label class="toctogglelabel" for="toctogglecheckbox"></label></span></div>
-<ul>
-<li class="toclevel-1 tocsection-1"><a href="#Descrizione"><span class="tocnumber">1</span> <span class="toctext">Descrizione</span></a></li>
-<li class="toclevel-1 tocsection-2"><a href="#Uso"><span class="tocnumber">2</span> <span class="toctext">Uso</span></a></li>
-<li class="toclevel-1 tocsection-3"><a href="#Script"><span class="tocnumber">3</span> <span class="toctext">Script</span></a></li>
-</ul>
-</div>
+<td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
-<div class="mw-translate-fuzzy">
+<p><span id="Description"></span>
+</p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<p>A volte in FreeCAD l'utente applica delle modifiche al modello, ma FreeCAD sembra non riconoscerle e l'icona blu <span typeof="mw:File"><a class="mw-file-description" href="../File/View-refresh.svg"><img decoding="async" height="16" src="../File/View-refresh.svg" width="16"/></a></span> rimane grigia. Questa piccola macro impone un ricalcolo manuale del modello.
+<div lang="en" dir="ltr" class="mw-content-ltr">
+<p>Sometimes when a user applies changes to the model, FreeCAD does not seem to recognize/integrate them. In addition to that, the blue <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Refresh.svg&amp;filetimestamp=20240528092556&amp;.html" class="mw-file-description"><img src="../File/Std_Refresh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Refresh.html" title="Std Refresh">Refresh/Recompute</a></span> button remains greyed out. Hence this small macro was designed to force a manual recompute of the model.
 </p>
 </div>
-<p>Sometimes when a user applies changes to the model, FreeCAD does not seem to recognize/integrate them. In addition to that, the blue <span style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.4em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a class="mw-file-description" href="../File/Std_Refresh.svg"><img decoding="async" height="24" src="../File/Std_Refresh.svg" width="24"/></a></span> <a href="../Std_Refresh.html" title="Std Refresh">Refresh/Recompute</a></span> button remains greyed out. Hence this small macro was designed to force a manual recompute of the model.
-</p>
 <div class="mw-translate-fuzzy">
-<p>Da FreeCAD v0.17, l'azione di questa macro può essere ottenuta tramite GUI. Nella vista a albero del modello, fare clic destro sul progetto e scegliere "Marca da ricalcolare" dal menu contestuale. Dopo di che, premere il pulsante <a href="../it\Std_Refresh.html" title="Std Refresh/it">Ricalcola</a>.
+<p>Da FreeCAD v0.17, l'azione di questa macro pu&ograve; essere ottenuta tramite GUI. Nella vista a albero del modello, fare clic destro sul progetto e scegliere "Marca da ricalcolare" dal menu contestuale. Dopo di che, premere il pulsante <a href="../it/Std_Refresh.html" title="Std Refresh/it">Ricalcola</a>.
 </p>
 </div>
+<p><span id="Usage"></span>
+</p>
 <div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Uso">Uso</span></h2>
 <p>Avviare la macro quando serve.
 </p>
 </div>
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Run the macro when necessary.
 </p>
+</div>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
+<div lang="en" dir="ltr" class="mw-content-ltr">
 <p>ToolBar Icon
-<span typeof="mw:File"><a class="mw-file-description" href="../File/Force_Recompute.png"><img decoding="async" height="24" src="../File/Force_Recompute.png" width="24"/></a></span>
+</p>
+</div>
+<p><span typeof="mw:File"><a href="../index.php?title=Force_Recompute.png&amp;filetimestamp=20140929195915&amp;.html" class="mw-file-description"><img src="../File/Force_Recompute.png" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="48" data-file-height="48"></a></span>
 </p><p><b>Macro Force_Recompute.py</b>
 </p>
 <pre># -*- coding: utf-8 -*-
@@ -114,28 +113,30 @@ FreeCAD.ActiveDocument.recompute()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20241214203146
+Cached time: 20260121085143
 Cache expiry: 86400
 Reduced expiry: false
-Complications: [show‐toc, no‐toc‐conversion]
-CPU time usage: 0.046 seconds
-Real time usage: 0.081 seconds
-Preprocessor visited node count: 100/1000000
-Post‐expand include size: 2322/2097152 bytes
-Template argument size: 668/2097152 bytes
+Complications: [show&#8208;toc]
+CPU time usage: 0.036 seconds
+Real time usage: 0.074 seconds
+Preprocessor visited node count: 102/1000000
+Post&#8208;expand include size: 2349/2097152 bytes
+Template argument size: 659/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post‐expand size: 1191/5000000 bytes
+Unstrip post&#8208;expand size: 1419/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.714      1 -total
- 37.75%    1.402      1 Template:Macro/it
- 25.02%    0.929      1 Template:MacroCode
- 14.92%    0.554      1 Template:Clear
- 14.46%    0.537      1 Template:Button
+100.00%   12.772      1 -total
+ 43.34%    5.536      1 Template:MacroCode
+ 24.32%    3.106      1 Template:Macro/it
+ 15.62%    1.995      1 Template:Button
+ 13.94%    1.780      1 Template:Clear
 -->
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20241214203146 and revision id 1121498. Rendering was triggered because: api-parse
+
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085143 and revision id 1741841. Rendering was triggered because: edit-page
  -->
-</div></div><script src="../script.js"></script>
+</div>
+</div><script src="../site.js"></script>
