--- a/wiki/it/Macro_ForceRecompute.html
+++ b/wiki/it/Macro_ForceRecompute.html
@@ -75,21 +75,15 @@ Macro Force Recompute
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Sometimes when a user applies changes to the model, FreeCAD does not seem to recognize/integrate them. In addition to that, the blue <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Refresh.svg&amp;filetimestamp=20240528092556&amp;.html" class="mw-file-description"><img src="../File/Std_Refresh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Refresh.html" title="Std Refresh">Refresh/Recompute</a></span> button remains greyed out. Hence this small macro was designed to force a manual recompute of the model.
+<p>A volte, quando un utente apporta modifiche al modello, FreeCAD sembra non riconoscerle/integrarle. Inoltre, il pulsante blu <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Std_Refresh.svg&amp;filetimestamp=20240528092556&amp;.html" class="mw-file-description"><img src="../File/Std_Refresh.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Std_Refresh.html" title="Std Refresh">Aggiorna/Ricalcola</a></span> rimane disattivato. Ecco perch&eacute; questa piccola macro &egrave; stata progettata per forzare un ricalcolo manuale del modello.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>Da FreeCAD v0.17, l'azione di questa macro pu&ograve; essere ottenuta tramite GUI. Nella vista a albero del modello, fare clic destro sul progetto e scegliere "Marca da ricalcolare" dal menu contestuale. Dopo di che, premere il pulsante <a href="../it/Std_Refresh.html" title="Std Refresh/it">Ricalcola</a>.
 </p>
 </div>
 <p><span id="Usage"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Uso">Uso</span></h2>
-<p>Avviare la macro quando serve.
-</p>
-</div>
+<h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Run the macro when necessary.
 </p>
@@ -113,15 +107,15 @@ FreeCAD.ActiveDocument.recompute()</pre>
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121085143
+Cached time: 20260121085204
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.074 seconds
-Preprocessor visited node count: 102/1000000
-Post&#8208;expand include size: 2349/2097152 bytes
-Template argument size: 659/2097152 bytes
+CPU time usage: 0.029 seconds
+Real time usage: 0.056 seconds
+Preprocessor visited node count: 100/1000000
+Post&#8208;expand include size: 2350/2097152 bytes
+Template argument size: 660/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -129,14 +123,14 @@ Unstrip post&#8208;expand size: 1419/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   12.772      1 -total
- 43.34%    5.536      1 Template:MacroCode
- 24.32%    3.106      1 Template:Macro/it
- 15.62%    1.995      1 Template:Button
- 13.94%    1.780      1 Template:Clear
+100.00%   16.728      1 -total
+ 44.25%    7.403      1 Template:Macro/it
+ 19.41%    3.247      1 Template:MacroCode
+ 17.97%    3.006      1 Template:Clear
+ 15.31%    2.561      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085143 and revision id 1741841. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:40731-0!canonical and timestamp 20260121085204 and revision id 1741845. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
