--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -467,8 +467,8 @@ If the command is not used in the chosen option, it will be grayed out.
 			<div class="gallerytext">Circular text on internal and external curve.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="index.php?title=FCCircularText_05.png&amp;filetimestamp=20140826200621&amp;.html" class="mw-file-description" title="Circular text on a flat objet."><img alt="Circular text on a flat objet." src="File/FCCircularText_05.png" decoding="async" width="252" height="200" class="mw-file-element" data-file-width="640" data-file-height="509"></a></span></div>
-			<div class="gallerytext">Circular text on a flat objet.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="index.php?title=FCCircularText_05.png&amp;filetimestamp=20140826200621&amp;.html" class="mw-file-description" title="Circular text on a flat object."><img alt="Circular text on a flat object." src="File/FCCircularText_05.png" decoding="async" width="252" height="200" class="mw-file-element" data-file-width="640" data-file-height="509"></a></span></div>
+			<div class="gallerytext">Circular text on a flat object.</div>
 		</li>
 </ul>
 </center>
@@ -916,35 +916,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155413
+Cached time: 20260121155601
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.383 seconds
-Real time usage: 0.454 seconds
+CPU time usage: 0.414 seconds
+Real time usage: 0.522 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 65907/5000000 bytes
+Unstrip post&#8208;expand size: 65910/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  226.286      1 -total
-  3.98%    9.003     18 Template:FALSE
-  2.07%    4.692      1 Template:Draft_Tools_navi
-  1.82%    4.129     10 Template:Code
-  1.80%    4.069      2 Template:Navigation_menu_2
-  1.23%    2.787      1 Template:Macro
-  1.18%    2.677      7 Template:RadioButton
-  1.09%    2.474      6 Template:SpinBox
-  1.09%    2.458      1 Template:Userdocnavi
-  1.04%    2.344     14 Template:TRUE
+100.00%  268.964      1 -total
+  3.57%    9.602      1 Template:Macro
+  2.09%    5.614      7 Template:RadioButton
+  2.07%    5.563      6 Template:SpinBox
+  1.81%    4.870      1 Template:Draft_Tools_navi
+  1.80%    4.842     10 Template:CheckBox
+  1.63%    4.391      1 Template:Codeextralink
+  1.63%    4.390      2 Template:Navigation_menu_2
+  1.47%    3.960      3 Template:ColoredText
+  1.43%    3.858     10 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155413 and revision id 1741868. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155602 and revision id 1741869. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
