--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -404,10 +404,10 @@ If the command is not used in the chosen option, it will be grayed out.
 <p><span class="mw-default-size" typeof="mw:File"><a href="index.php?title=FCCircularText_13.png&amp;filetimestamp=20210315204604&amp;.html" class="mw-file-description"><img src="File/FCCircularText_13.png" decoding="async" width="500" height="115" class="mw-file-element" data-file-width="500" data-file-height="115"></a></span>
 </p>
 <div style="clear:both"></div>
-<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>   &nbsp;: Leaves the macro.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>  &nbsp;: Reset all values and displays the number of characters displayed in the window.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>&nbsp;: Launches the macro and creates a Compound object of all characters.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>     &nbsp;: Launches the macro</li></ul>
+<ul><li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Exit</span>: Leaves the macro.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Reset</span>: Reset all values and displays the number of characters displayed in the window.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>: Launches the macro and creates a Compound object of all characters.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>: Launches the macro</li></ul>
 <h3><span class="mw-headline" id="Parameters_available">Parameters available</span></h3>
 <p>Certain parameter are available in the parameters of FreeCAD, see: <b>Menu &rarr; Tools &rarr; Edit Parameters</b>
 </p>
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121155601
+Cached time: 20260121155631
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.414 seconds
-Real time usage: 0.522 seconds
+CPU time usage: 0.344 seconds
+Real time usage: 0.385 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65910/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  268.964      1 -total
-  3.57%    9.602      1 Template:Macro
-  2.09%    5.614      7 Template:RadioButton
-  2.07%    5.563      6 Template:SpinBox
-  1.81%    4.870      1 Template:Draft_Tools_navi
-  1.80%    4.842     10 Template:CheckBox
-  1.63%    4.391      1 Template:Codeextralink
-  1.63%    4.390      2 Template:Navigation_menu_2
-  1.47%    3.960      3 Template:ColoredText
-  1.43%    3.858     10 Template:Code
+100.00%  174.740      1 -total
+  2.49%    4.343      1 Template:Draft_Tools_navi
+  2.23%    3.900     10 Template:Code
+  2.17%    3.794      2 Template:Navigation_menu_2
+  1.37%    2.397      1 Template:Macro
+  1.34%    2.349      6 Template:SpinBox
+  1.33%    2.328      7 Template:RadioButton
+  1.33%    2.320      1 Template:Userdocnavi
+  1.29%    2.252     10 Template:CheckBox
+  1.24%    2.162      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155602 and revision id 1741869. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260121155631 and revision id 1741870. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
