--- a/wiki/Std_ProjectUtil.html
+++ b/wiki/Std_ProjectUtil.html
@@ -1,10 +1,10 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Std ProjectUtil</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Std+ProjectUtil&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--complete" title="Std ProjektHilfsprogramm (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Std ProjektHilfsprogramm (94% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title="Std ProjectoUtil (56% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="fr/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--complete" title="Std Utilitaire de projet (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Strumenti: Utilit&agrave; di progetto (81% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--complete" title="Std: Narz&#281;dzie dokumentu (100% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="fr/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Std Utilitaire de projet (94% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Strumenti: Utilit&agrave; di progetto (75% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--high" title="Std: Narz&#281;dzie dokumentu (94% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="pt-br/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title="Std ProjectUtil (25% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="ru/Std_ProjectUtil.html" class="mw-pt-progress mw-pt-progress--med" title='&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; "&#1059;&#1090;&#1080;&#1083;&#1080;&#1090;&#1072; &#1088;&#1072;&#1089;&#1087;&#1072;&#1082;&#1086;&#1074;&#1082;&#1080; &#1092;&#1072;&#1081;&#1083;&#1072; &#1087;&#1088;&#1086;&#1077;&#1082;&#1090;&#1072;..." (31% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -146,35 +146,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120053957
+Cached time: 20260121160037
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.104 seconds
-Real time usage: 0.128 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.179 seconds
 Preprocessor visited node count: 564/1000000
 Post&#8208;expand include size: 30217/2097152 bytes
 Template argument size: 11128/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1771/5000000 bytes
+Unstrip post&#8208;expand size: 1756/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.535      1 -total
- 34.59%    7.104      1 Template:Std_Base_navi
- 29.60%    6.079      2 Template:Navigation_menu_2
- 12.16%    2.498      1 Template:GuiCommand
- 11.99%    2.462      1 Template:Userdocnavi
- 11.24%    2.309      4 Template:FileName
-  8.78%    1.803      2 Template:Docnav
-  5.37%    1.102      8 Template:Button
-  5.34%    1.097      1 Template:Caption
-  4.67%    0.959      6 Template:MenuCommand
+100.00%   36.510      1 -total
+ 31.03%   11.330      2 Template:Docnav
+ 20.24%    7.388      1 Template:Std_Base_navi
+ 17.89%    6.531      2 Template:Navigation_menu_2
+ 14.88%    5.432      4 Template:FileName
+  9.32%    3.401      1 Template:GuiCommand
+  7.39%    2.698      1 Template:Userdocnavi
+  5.69%    2.076      1 Template:Caption
+  4.25%    1.552      8 Template:Button
+  2.70%    0.986      6 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193023-0!canonical and timestamp 20260120054006 and revision id 1741495. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:193023-0!canonical and timestamp 20260121160037 and revision id 1741495. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
